CHANGES IN FLTK 1.1.1

	- fl_filename_match() was inconsistently doing case-
	  insensitive matching.
	- Fl_Button redraw fix for bug #620979 (focus boxes and
	  check buttons).
	- Fl_Text_Display fix for bug #620633 (crash on
	  redisplay).
	- Fl_Output now calls its callback when the user clicks
	  or drags in the widget.
	- Shortcuts now cause buttons to take focus when visible
	  focus is enabled.
	- fl_filename_relative() didn't check that the path was
	  absolute under WIN32.
	- fl_filename_relative() didn't check that the path was
	  on the current drive under WIN32.
	- The Fl_BMP_Image class now handles 16-bit BMP files
	  and BMP files with a transparency mask.
	- The fltk-config script didn't add the required include
	  path, if any, when compiling a program.
	- Added a license clarification that the FLTK manual is
	  covered by the same license as FLTK itself.
	- Fl_Check_Browser wasn't documented.
	- Fl_Preferences::Node::addChild(), deleteEntry(), and
	  remove() didn't set the "dirty" flag.
	- The "no change" button didn't work in the FLUID widget
	  panel.
	- Vertical scrollbars did not draw the arrows inactive
	  when the scrollbar was inactive.


CHANGES IN FLTK 1.1.0

	- Documentation updates.
	- Added a Fl_Widget::redraw_label() method which flags a
	  redraw of the appropriate area.  This helps to
	  eliminate flicker when updating the value of a widget.
	- Fl_Wizard::value() now resets the mouse cursor to the
	  window's default cursor.
	- Fl_File_Chooser::type() didn't enable/disable the new
	  directory button correctly.
	- Fl_Preferences::entryExists() did not work properly.
	- FLUID's image file chooser pattern was incorrect.
	- Fl_File_Icon::load_system_icons() now detects KDE
	  icons in /opt/kde, /usr/local, and /usr automatically,
	  and supports the KDEDIR environment variable as well.
	- Submenus now display to the left of the parent menu if
	  they won't fit to the right.  Previously they would