@@ -1,5 +1,7 @@
 CHANGES IN FLTK 1.1.1
 
+	- Fl_PNM_Image didn't set the "alloc" flag for the data,
+	  which could lead to a memory leak.
 	- fl_filename_match() was inconsistently doing case-
 	  insensitive matching.
 	- Fl_Button redraw fix for bug #620979 (focus boxes and
